# partitionfinder

./: PartitionFinder.py  PartitionFinderMorphology.py  PartitionFinderProtein.py  build_ext.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
partfinder/: algorithm.py  alignment.py  analysis.py  analysis_method.py  config.py  database.py  dependencies.py  entropy.py  kmeans.py  logtools.py  main.py  model_loader.py  model_utils.py  morph_tiger.py  neighbour.py  parser.py  phyml.py  phyml_models.py  progress.py  raxml.py  raxml_models.py  reporter.py  results.py  scheme.py  submodels.py  subset.py  subset_ops.py  threadpool.py  util.py
tests/: test_alignment.py  test_options.py  test_raxml.py  test_submodels.py  test_subset.py
tests/PF2/: test_pf2.py
tests/all_succeed/: test_all_success.py
tests/cfg/: test_configs.py
tests/christof/: test_christof.py
tests/clustering/: test_clustering.py
tests/full_analysis/: test_full.py
tests/kmeans/: test_kmeans.py
tests/kmeans_ml_tree/: test_ml_tree.py
tests/morphology/: test_AIC.py  test_aicc.py  test_bic.py  test_incorrectmat.py  test_mat.py  test_modelBin.py  test_modelBinASC.py  test_modelBinMisSpec.py  test_modelMulti.py  test_modelMultiASC.py  test_modeloutput.py  test_nsubs.py  test_wrongmodel.py
tests/morphology/tiger/: test_parse_to_rates.py  test_rate_calc.py
tests/quick_analysis/: test_quick.py
timings/: array_lookups.py  numpy_vs_set.py
