[project]
name = "partitionfinder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.1.2",
    "pandas>=2.2.3",
    "pyparsing>=3.2.0",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "tables>=3.10.1",
]

[tool.uv]
dev-dependencies = ["black>=24.10.0", "isort>=5.13.2"]

[tool.isort]
profile = "black"
